# appcenter-sdk-cpp

./: .clang-format  .gitignore  .gitlab-ci.yml  LICENSE  README.md  meson.build  meson_options.txt
samples/: meson.build
samples/demo/: meson.build
samples/demo/include/: example.hpp
samples/demo/src/: example.cpp  source.cpp
sdk/: meson.build
sdk/analytics/: meson.build
sdk/analytics/include/appcenter/analytics/: analytics.hpp
sdk/analytics/include/appcenter/analytics/api/: analytics-api.hpp
sdk/analytics/private/appcenter/sdk/analytics/: analytics.hpp
sdk/analytics/src/analytics/: analytics.cpp
sdk/analytics/src/analytics/api/: analytics-api.cpp
sdk/appcenter/: meson.build
sdk/appcenter/impl/: meson.build
sdk/appcenter/impl/include/appcenter/sdk/impl/: platformInfo.hpp
sdk/appcenter/impl/linux/: meson.build
sdk/appcenter/impl/linux/src/: linuxImpl.cpp
sdk/appcenter/impl/linux/src/util/: uuid.cpp
sdk/appcenter/impl/windows/: meson.build
sdk/appcenter/impl/windows/src/: windowsImpl.cpp
sdk/appcenter/impl/windows/src/util/: uuid.cpp
sdk/appcenter/include/appcenter/: appcenter.hpp
sdk/appcenter/include/appcenter/api/: appcenter-api.hpp  memory.hpp
sdk/appcenter/include/appcenter/appcenter/: platform.hpp
sdk/appcenter/include/appcenter/channel/: Channel.hpp  Flag.hpp  GroupListener.hpp  Listener.hpp
sdk/appcenter/include/appcenter/common/: AppCenterError.hpp  AppCenterLog.hpp  Device.hpp  LogLevel.hpp
sdk/appcenter/include/appcenter/core/: LogLevel.hpp  logger.hpp
sdk/appcenter/include/appcenter/http/: httpResponse.hpp  serviceCall.hpp  serviceCallback.hpp
sdk/appcenter/include/appcenter/ingestion/: ingestion.hpp
sdk/appcenter/include/appcenter/ingestion/models/: log.hpp  logContainer.hpp
sdk/appcenter/include/appcenter/private/: exportAPI.hpp  services.hpp
sdk/appcenter/include/appcenter/service/: IService.hpp  services.hpp
sdk/appcenter/include/appcenter/util/: Date.hpp  UUID.hpp
sdk/appcenter/include/appcenter/util/mixin/: abstract.hpp  singleton.hpp
sdk/appcenter/private/appcenter/: constants.hpp  macros.hpp
sdk/appcenter/private/appcenter/ingestion/: device.hpp
sdk/appcenter/private/appcenter/sdk/: appcenter.hpp  constants.hpp
sdk/appcenter/private/appcenter/sdk/channel/: Channel.hpp  Flag.hpp  GroupListener.hpp  Listener.hpp
sdk/appcenter/private/appcenter/sdk/core/: logger.hpp  platform.hpp
sdk/appcenter/private/appcenter/sdk/ingestion/: device.hpp  ingestion.hpp
sdk/appcenter/private/appcenter/sdk/ingestion/models/: log.hpp  logContainer.hpp
sdk/appcenter/private/appcenter/sdk/service/: internalService.hpp  service.hpp
sdk/appcenter/private/appcenter/sdk/storage/: storageService.hpp
sdk/appcenter/private/appcenter/sdk/util/: Date.hpp
sdk/appcenter/private/appcenter/sdk/utils/: macros.hpp
sdk/appcenter/src/: appcenter-sdk.cpp  appcenter.cpp
sdk/appcenter/src/appcenter/api/: bindings.cpp  memory.cpp
sdk/appcenter/src/appcenter/core/: logger.cpp
sdk/appcenter/src/appcenter/ingestion/: device.cpp
sdk/appcenter/src/sdk/: appcenter.cpp
sdk/appcenter/src/sdk/core/: logger.cpp  platform.cpp
sdk/appcenter/src/sdk/ingestion/: device.cpp
sdk/appcenter/src/sdk/ingestion/models/: log.cpp
sdk/appcenter/src/sdk/storage/: storageService.cpp
sdk/appcenter/src/sdk/util/: Date.cpp
sdk/appcenter/src/util/: UUID.cpp
spec/: README.md  core.md
spec/core/: channel.md  core.md  ingestion.md  logger.md  requests.md
subprojects/: .gitignore  SQLiteCpp.wrap  cpp-libcfgpath.wrap  cpp_libuuid.wrap  restclient-cpp.wrap  tomlplusplus.wrap  xxhash.wrap
test/: meson.build
test/appcenter/core/: logger_test.cpp
test/appcenter/util/: UUIDtest.cpp
